--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						</div>
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Create Exceptional Experiences</h2>
+								<h2>My Experiences</h2>
 							</header>
 							<p>At the heart of my work is a commitment to creating exceptional experiences. With a background in training users and providing mentorship to students, I bring a wealth of knowledge in guiding individuals and organizations towards success, I thrive on empowering others to unlock their full potential.
 
