--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="col-6 col-12-medium">
 							<ul class="major-icons">
 								<li><span class="icon solid style1 major fa-code"></span></li>
-								<li><span class="icon solid style2 major fa-javascript"></span></li>
+								<li><span class="<i class="fab fa-js"></span></li>
 								<li><span class="icon solid style3 major fa-HTML"></span></li>
 								<li><span class="icon solid style4 major fa-css"></span></li>
 								<li><span class="icon solid style5 major fa-React.js"></span></li>
