--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<h3>Staff and User Training</h3>
 							<p>A significant aspect of my role involves conducting staff training sessions on utilizing websites that I've developed. Through these sessions, I equip team members with the necessary skills to navigate, update, and maintain the websites effectively. By providing hands-on guidance and personalized instruction, I ensure that staff members feel confident and proficient in managing the platforms, thereby optimizing their workflow and maximizing the impact of the websites on their objectives.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://scontent.fadd2-1.fna.fbcdn.net/v/t39.30808-6/400157690_306097015612180_7791363151920873460_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=dd5e9f&_nc_ohc=TxS3MoImBxAAX-Qfo6c&_nc_ht=scontent.fadd2-1.fna&oh=00_AfBlWQYDLwyMS2Aj57CuvzlhmCCf-rBclrlJddWBQop0bg&oe=65E02D95" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
