--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<h3>Staff and User Training</h3>
 							<p>A significant aspect of my role involves conducting staff training sessions on utilizing websites that I've developed. Through these sessions, I equip team members with the necessary skills to navigate, update, and maintain the websites effectively. By providing hands-on guidance and personalized instruction, I ensure that staff members feel confident and proficient in managing the platforms, thereby optimizing their workflow and maximizing the impact of the websites on their objectives.</p>
 							<ul class="actions special">
-								<li><a href="https://www.facebook.com/100086356527423/posts/pfbid0w9YHnFyVUMYu9CGoZnpbK2Lx7trXjME3Givwc1NK6Wt9pfwGDQUZahM3QgT7zVoVl/?app=fbl" class="button">Learn More</a></li>
+								<li><a href="https://www.facebook.com/100086356527423/posts/pfbid0w9YHnFyVUMYu9CGoZnpbK2Lx7trXjME3Givwc1NK6Wt9pfwGDQUZahM3QgT7zVoVl/?app=fbl" class="button">See More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -92,7 +92,7 @@
 							<p>A significant aspect of my role involves conducting staff training sessions on utilizing WordPress websites that I've developed. Through these sessions,<br/>
 							  I empower team members with the skills to effectively navigate, update, and manage WordPress-based platforms.</p>
 							<ul class="actions special">
-								<li><a href="https://easterndevin.org/" class="button">Learn More</a></li>
+								<li><a href="https://easterndevin.org/" class="button">See More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -100,7 +100,7 @@
 							<h3>Property Managment System</h3>
 							<p>I specialize in upgrading websites using CodeIgniter and providing comprehensive user training. With a track record of deploying this web application to over 10 government organizations, I've honed my skills in developing robust and scalable web applications. </p>
 							<ul class="actions special">
-								<li><a href="https://afronex.com/pms/" class="button">Learn More</a></li>
+								<li><a href="https://afronex.com/pms/" class="button">See More</a></li>
 							</ul>
 						</div>
 					</div>
